parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALERT
    AMPERSAND
    BARRA
    BEGIN
    BEGIN_M
    BOOLEAN
    CIRCUMFLEX
    COLON
    COMBCOMP
    COMMENT
    DIVASSIGN
    DIVIDE
    DOBLEQUOTE
    DOUBLEAMPERSAND
    DOUBLELESSTHAN
    DOUBLEPIPE
    ELSEIF
    END_M
    EXPASSIGN
    FALSE
    GETS
    MINASSIGN
    MINUS
    MODASSIGN
    NIL
    NOT
    NOTEQUAL
    OR
    PERCENTAGE
    PLUS
    PLUSASSIGN
    QUESTIONMARKPERIOD
    SEMICOLON
    SINGLEQUOTE
    TIMESASSIGN
    TRUE
    TWOGREATERTHAN
    UNTIL
    WAVE

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> declaracion
Rule 2     inicio -> loop
Rule 3     inicio -> impresion
Rule 4     inicio -> funcion
Rule 5     inicio -> if
Rule 6     inicio -> array
Rule 7     inicio -> accederarray
Rule 8     funcion -> DEF LOCALVAR LPARENTHESES argumentos RPARENTHESES cuerpo END
Rule 9     funcion -> DEF LOCALVAR LPARENTHESES argumentos RPARENTHESES cuerpo retornar END
Rule 10    argumentos -> variosargumentos
Rule 11    argumentos -> MULTIPLY LOCALVAR
Rule 12    argumentos -> TWOSTARS LOCALVAR
Rule 13    argumentos -> LOCALVAR EQUAL LCURLYBRACKET RCURLYBRACKET
Rule 14    argumentos -> LOCALVAR TWOPOINTS datos
Rule 15    variosargumentos -> LOCALVAR
Rule 16    variosargumentos -> LOCALVAR EQUAL datos
Rule 17    variosargumentos -> LOCALVAR masargumentos
Rule 18    variosargumentos -> LOCALVAR EQUAL datos masargumentos
Rule 19    masargumentos -> COMMA variosargumentos
Rule 20    retornar -> RETURN LOCALVAR
Rule 21    retornar -> RETURN datos
Rule 22    loop -> FOR LOCALVAR IN rango cuerpo END
Rule 23    declaracion -> tiposvariables EQUAL datos
Rule 24    declaracion -> tiposvariables EQUAL estructuras
Rule 25    tiposvariables -> VAR
Rule 26    tiposvariables -> LOCALVAR
Rule 27    tiposvariables -> CONSTANT
Rule 28    datos -> NUMBER
Rule 29    datos -> FLOAT
Rule 30    datos -> STRING
Rule 31    estructuras -> hash
Rule 32    cuerpo -> declaracion
Rule 33    cuerpo -> loop
Rule 34    cuerpo -> impresion
Rule 35    hash -> LCURLYBRACKET elementoHash RCURLYBRACKET masopciones
Rule 36    elementoHash -> datos EQUAL GREATERTHAN datos maselementos
Rule 37    maselementos -> <empty>
Rule 38    maselementos -> COMMA elementoHash maselementos
Rule 39    masopciones -> <empty>
Rule 40    masopciones -> LOCALVAR DOT funcionesHash masopciones
Rule 41    funcionesHash -> INCLUDE QUESTIONMARK LPARENTHESES datos RPARENTHESES
Rule 42    funcionesHash -> DELETE LPARENTHESES datos RPARENTHESES
Rule 43    funcionesHash -> KEYS
Rule 44    rango -> NUMBER RANGEINCLUSIVE NUMBER
Rule 45    rango -> NUMBER RANGEXCLUSIVE NUMBER
Rule 46    impresion -> PUTS datos
Rule 47    impresion -> PRINT datos
Rule 48    impresion -> PUTS LOCALVAR
Rule 49    impresion -> PRINT LOCALVAR
Rule 50    impresion -> PUTS masopciones
Rule 51    impresion -> PRINT masopciones
Rule 52    array -> tiposvariables EQUAL LBRACKET datosarray RBRACKET
Rule 53    array -> tiposvariables EQUAL LBRACKET RBRACKET
Rule 54    if -> IF datosvarios operadores datosvarios cuerpo END
Rule 55    if -> IF datosvarios operadores datosvarios cuerpo else
Rule 56    else -> ELSE cuerpo END
Rule 57    operadores -> DOUBLEEQUAL
Rule 58    operadores -> TRIPLEEQUAL
Rule 59    operadores -> GREATERTHAN
Rule 60    operadores -> EXCLAMATION EQUAL
Rule 61    operadores -> LESSTHAN
Rule 62    operadores -> GREQUAL
Rule 63    operadores -> LEQUAL
Rule 64    datosvarios -> datos
Rule 65    datosvarios -> tiposvariables
Rule 66    datosarray -> datosvarios
Rule 67    datosarray -> datosarray COMMA datosvarios
Rule 68    accederarray -> tiposvariables LBRACKET NUMBER RBRACKET

Terminals, with rules where they appear

ALERT                : 
AMPERSAND            : 
BARRA                : 
BEGIN                : 
BEGIN_M              : 
BOOLEAN              : 
CIRCUMFLEX           : 
COLON                : 
COMBCOMP             : 
COMMA                : 19 38 67
COMMENT              : 
CONSTANT             : 27
DEF                  : 8 9
DELETE               : 42
DIVASSIGN            : 
DIVIDE               : 
DOBLEQUOTE           : 
DOT                  : 40
DOUBLEAMPERSAND      : 
DOUBLEEQUAL          : 57
DOUBLELESSTHAN       : 
DOUBLEPIPE           : 
ELSE                 : 56
ELSEIF               : 
END                  : 8 9 22 54 56
END_M                : 
EQUAL                : 13 16 18 23 24 36 52 53 60
EXCLAMATION          : 60
EXPASSIGN            : 
FALSE                : 
FLOAT                : 29
FOR                  : 22
GETS                 : 
GREATERTHAN          : 36 59
GREQUAL              : 62
IF                   : 54 55
IN                   : 22
INCLUDE              : 41
KEYS                 : 43
LBRACKET             : 52 53 68
LCURLYBRACKET        : 13 35
LEQUAL               : 63
LESSTHAN             : 61
LOCALVAR             : 8 9 11 12 13 14 15 16 17 18 20 22 26 40 48 49
LPARENTHESES         : 8 9 41 42
MINASSIGN            : 
MINUS                : 
MODASSIGN            : 
MULTIPLY             : 11
NIL                  : 
NOT                  : 
NOTEQUAL             : 
NUMBER               : 28 44 44 45 45 68
OR                   : 
PERCENTAGE           : 
PLUS                 : 
PLUSASSIGN           : 
PRINT                : 47 49 51
PUTS                 : 46 48 50
QUESTIONMARK         : 41
QUESTIONMARKPERIOD   : 
RANGEINCLUSIVE       : 44
RANGEXCLUSIVE        : 45
RBRACKET             : 52 53 68
RCURLYBRACKET        : 13 35
RETURN               : 20 21
RPARENTHESES         : 8 9 41 42
SEMICOLON            : 
SINGLEQUOTE          : 
STRING               : 30
TIMESASSIGN          : 
TRIPLEEQUAL          : 58
TRUE                 : 
TWOGREATERTHAN       : 
TWOPOINTS            : 14
TWOSTARS             : 12
UNTIL                : 
VAR                  : 25
WAVE                 : 
error                : 

Nonterminals, with rules where they appear

accederarray         : 7
argumentos           : 8 9
array                : 6
cuerpo               : 8 9 22 54 55 56
datos                : 14 16 18 21 23 36 36 41 42 46 47 64
datosarray           : 52 67
datosvarios          : 54 54 55 55 66 67
declaracion          : 1 32
elementoHash         : 35 38
else                 : 55
estructuras          : 24
funcion              : 4
funcionesHash        : 40
hash                 : 31
if                   : 5
impresion            : 3 34
inicio               : 0
loop                 : 2 33
masargumentos        : 17 18
maselementos         : 36 38
masopciones          : 35 40 50 51
operadores           : 54 55
rango                : 22
retornar             : 9
tiposvariables       : 23 24 52 53 65 68
variosargumentos     : 10 19

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . declaracion
    (2) inicio -> . loop
    (3) inicio -> . impresion
    (4) inicio -> . funcion
    (5) inicio -> . if
    (6) inicio -> . array
    (7) inicio -> . accederarray
    (23) declaracion -> . tiposvariables EQUAL datos
    (24) declaracion -> . tiposvariables EQUAL estructuras
    (22) loop -> . FOR LOCALVAR IN rango cuerpo END
    (46) impresion -> . PUTS datos
    (47) impresion -> . PRINT datos
    (48) impresion -> . PUTS LOCALVAR
    (49) impresion -> . PRINT LOCALVAR
    (50) impresion -> . PUTS masopciones
    (51) impresion -> . PRINT masopciones
    (8) funcion -> . DEF LOCALVAR LPARENTHESES argumentos RPARENTHESES cuerpo END
    (9) funcion -> . DEF LOCALVAR LPARENTHESES argumentos RPARENTHESES cuerpo retornar END
    (54) if -> . IF datosvarios operadores datosvarios cuerpo END
    (55) if -> . IF datosvarios operadores datosvarios cuerpo else
    (52) array -> . tiposvariables EQUAL LBRACKET datosarray RBRACKET
    (53) array -> . tiposvariables EQUAL LBRACKET RBRACKET
    (68) accederarray -> . tiposvariables LBRACKET NUMBER RBRACKET
    (25) tiposvariables -> . VAR
    (26) tiposvariables -> . LOCALVAR
    (27) tiposvariables -> . CONSTANT

    FOR             shift and go to state 10
    PUTS            shift and go to state 12
    PRINT           shift and go to state 13
    DEF             shift and go to state 14
    IF              shift and go to state 15
    VAR             shift and go to state 16
    LOCALVAR        shift and go to state 11
    CONSTANT        shift and go to state 17

    inicio                         shift and go to state 1
    declaracion                    shift and go to state 2
    loop                           shift and go to state 3
    impresion                      shift and go to state 4
    funcion                        shift and go to state 5
    if                             shift and go to state 6
    array                          shift and go to state 7
    accederarray                   shift and go to state 8
    tiposvariables                 shift and go to state 9

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> declaracion .

    $end            reduce using rule 1 (inicio -> declaracion .)


state 3

    (2) inicio -> loop .

    $end            reduce using rule 2 (inicio -> loop .)


state 4

    (3) inicio -> impresion .

    $end            reduce using rule 3 (inicio -> impresion .)


state 5

    (4) inicio -> funcion .

    $end            reduce using rule 4 (inicio -> funcion .)


state 6

    (5) inicio -> if .

    $end            reduce using rule 5 (inicio -> if .)


state 7

    (6) inicio -> array .

    $end            reduce using rule 6 (inicio -> array .)


state 8

    (7) inicio -> accederarray .

    $end            reduce using rule 7 (inicio -> accederarray .)


state 9

    (23) declaracion -> tiposvariables . EQUAL datos
    (24) declaracion -> tiposvariables . EQUAL estructuras
    (52) array -> tiposvariables . EQUAL LBRACKET datosarray RBRACKET
    (53) array -> tiposvariables . EQUAL LBRACKET RBRACKET
    (68) accederarray -> tiposvariables . LBRACKET NUMBER RBRACKET

    EQUAL           shift and go to state 18
    LBRACKET        shift and go to state 19


state 10

    (22) loop -> FOR . LOCALVAR IN rango cuerpo END

    LOCALVAR        shift and go to state 20


state 11

    (26) tiposvariables -> LOCALVAR .

    EQUAL           reduce using rule 26 (tiposvariables -> LOCALVAR .)
    LBRACKET        reduce using rule 26 (tiposvariables -> LOCALVAR .)
    DOUBLEEQUAL     reduce using rule 26 (tiposvariables -> LOCALVAR .)
    TRIPLEEQUAL     reduce using rule 26 (tiposvariables -> LOCALVAR .)
    GREATERTHAN     reduce using rule 26 (tiposvariables -> LOCALVAR .)
    EXCLAMATION     reduce using rule 26 (tiposvariables -> LOCALVAR .)
    LESSTHAN        reduce using rule 26 (tiposvariables -> LOCALVAR .)
    GREQUAL         reduce using rule 26 (tiposvariables -> LOCALVAR .)
    LEQUAL          reduce using rule 26 (tiposvariables -> LOCALVAR .)
    RBRACKET        reduce using rule 26 (tiposvariables -> LOCALVAR .)
    COMMA           reduce using rule 26 (tiposvariables -> LOCALVAR .)
    FOR             reduce using rule 26 (tiposvariables -> LOCALVAR .)
    PUTS            reduce using rule 26 (tiposvariables -> LOCALVAR .)
    PRINT           reduce using rule 26 (tiposvariables -> LOCALVAR .)
    VAR             reduce using rule 26 (tiposvariables -> LOCALVAR .)
    LOCALVAR        reduce using rule 26 (tiposvariables -> LOCALVAR .)
    CONSTANT        reduce using rule 26 (tiposvariables -> LOCALVAR .)


state 12

    (46) impresion -> PUTS . datos
    (48) impresion -> PUTS . LOCALVAR
    (50) impresion -> PUTS . masopciones
    (28) datos -> . NUMBER
    (29) datos -> . FLOAT
    (30) datos -> . STRING
    (39) masopciones -> .
    (40) masopciones -> . LOCALVAR DOT funcionesHash masopciones

    LOCALVAR        shift and go to state 22
    NUMBER          shift and go to state 24
    FLOAT           shift and go to state 25
    STRING          shift and go to state 26
    $end            reduce using rule 39 (masopciones -> .)
    END             reduce using rule 39 (masopciones -> .)
    ELSE            reduce using rule 39 (masopciones -> .)
    RETURN          reduce using rule 39 (masopciones -> .)

    datos                          shift and go to state 21
    masopciones                    shift and go to state 23

state 13

    (47) impresion -> PRINT . datos
    (49) impresion -> PRINT . LOCALVAR
    (51) impresion -> PRINT . masopciones
    (28) datos -> . NUMBER
    (29) datos -> . FLOAT
    (30) datos -> . STRING
    (39) masopciones -> .
    (40) masopciones -> . LOCALVAR DOT funcionesHash masopciones

    LOCALVAR        shift and go to state 28
    NUMBER          shift and go to state 24
    FLOAT           shift and go to state 25
    STRING          shift and go to state 26
    $end            reduce using rule 39 (masopciones -> .)
    END             reduce using rule 39 (masopciones -> .)
    ELSE            reduce using rule 39 (masopciones -> .)
    RETURN          reduce using rule 39 (masopciones -> .)

    datos                          shift and go to state 27
    masopciones                    shift and go to state 29

state 14

    (8) funcion -> DEF . LOCALVAR LPARENTHESES argumentos RPARENTHESES cuerpo END
    (9) funcion -> DEF . LOCALVAR LPARENTHESES argumentos RPARENTHESES cuerpo retornar END

    LOCALVAR        shift and go to state 30


state 15

    (54) if -> IF . datosvarios operadores datosvarios cuerpo END
    (55) if -> IF . datosvarios operadores datosvarios cuerpo else
    (64) datosvarios -> . datos
    (65) datosvarios -> . tiposvariables
    (28) datos -> . NUMBER
    (29) datos -> . FLOAT
    (30) datos -> . STRING
    (25) tiposvariables -> . VAR
    (26) tiposvariables -> . LOCALVAR
    (27) tiposvariables -> . CONSTANT

    NUMBER          shift and go to state 24
    FLOAT           shift and go to state 25
    STRING          shift and go to state 26
    VAR             shift and go to state 16
    LOCALVAR        shift and go to state 11
    CONSTANT        shift and go to state 17

    datosvarios                    shift and go to state 31
    datos                          shift and go to state 32
    tiposvariables                 shift and go to state 33

state 16

    (25) tiposvariables -> VAR .

    EQUAL           reduce using rule 25 (tiposvariables -> VAR .)
    LBRACKET        reduce using rule 25 (tiposvariables -> VAR .)
    DOUBLEEQUAL     reduce using rule 25 (tiposvariables -> VAR .)
    TRIPLEEQUAL     reduce using rule 25 (tiposvariables -> VAR .)
    GREATERTHAN     reduce using rule 25 (tiposvariables -> VAR .)
    EXCLAMATION     reduce using rule 25 (tiposvariables -> VAR .)
    LESSTHAN        reduce using rule 25 (tiposvariables -> VAR .)
    GREQUAL         reduce using rule 25 (tiposvariables -> VAR .)
    LEQUAL          reduce using rule 25 (tiposvariables -> VAR .)
    RBRACKET        reduce using rule 25 (tiposvariables -> VAR .)
    COMMA           reduce using rule 25 (tiposvariables -> VAR .)
    FOR             reduce using rule 25 (tiposvariables -> VAR .)
    PUTS            reduce using rule 25 (tiposvariables -> VAR .)
    PRINT           reduce using rule 25 (tiposvariables -> VAR .)
    VAR             reduce using rule 25 (tiposvariables -> VAR .)
    LOCALVAR        reduce using rule 25 (tiposvariables -> VAR .)
    CONSTANT        reduce using rule 25 (tiposvariables -> VAR .)


state 17

    (27) tiposvariables -> CONSTANT .

    EQUAL           reduce using rule 27 (tiposvariables -> CONSTANT .)
    LBRACKET        reduce using rule 27 (tiposvariables -> CONSTANT .)
    DOUBLEEQUAL     reduce using rule 27 (tiposvariables -> CONSTANT .)
    TRIPLEEQUAL     reduce using rule 27 (tiposvariables -> CONSTANT .)
    GREATERTHAN     reduce using rule 27 (tiposvariables -> CONSTANT .)
    EXCLAMATION     reduce using rule 27 (tiposvariables -> CONSTANT .)
    LESSTHAN        reduce using rule 27 (tiposvariables -> CONSTANT .)
    GREQUAL         reduce using rule 27 (tiposvariables -> CONSTANT .)
    LEQUAL          reduce using rule 27 (tiposvariables -> CONSTANT .)
    RBRACKET        reduce using rule 27 (tiposvariables -> CONSTANT .)
    COMMA           reduce using rule 27 (tiposvariables -> CONSTANT .)
    FOR             reduce using rule 27 (tiposvariables -> CONSTANT .)
    PUTS            reduce using rule 27 (tiposvariables -> CONSTANT .)
    PRINT           reduce using rule 27 (tiposvariables -> CONSTANT .)
    VAR             reduce using rule 27 (tiposvariables -> CONSTANT .)
    LOCALVAR        reduce using rule 27 (tiposvariables -> CONSTANT .)
    CONSTANT        reduce using rule 27 (tiposvariables -> CONSTANT .)


state 18

    (23) declaracion -> tiposvariables EQUAL . datos
    (24) declaracion -> tiposvariables EQUAL . estructuras
    (52) array -> tiposvariables EQUAL . LBRACKET datosarray RBRACKET
    (53) array -> tiposvariables EQUAL . LBRACKET RBRACKET
    (28) datos -> . NUMBER
    (29) datos -> . FLOAT
    (30) datos -> . STRING
    (31) estructuras -> . hash
    (35) hash -> . LCURLYBRACKET elementoHash RCURLYBRACKET masopciones

    LBRACKET        shift and go to state 36
    NUMBER          shift and go to state 24
    FLOAT           shift and go to state 25
    STRING          shift and go to state 26
    LCURLYBRACKET   shift and go to state 38

    datos                          shift and go to state 34
    estructuras                    shift and go to state 35
    hash                           shift and go to state 37

state 19

    (68) accederarray -> tiposvariables LBRACKET . NUMBER RBRACKET

    NUMBER          shift and go to state 39


state 20

    (22) loop -> FOR LOCALVAR . IN rango cuerpo END

    IN              shift and go to state 40


state 21

    (46) impresion -> PUTS datos .

    $end            reduce using rule 46 (impresion -> PUTS datos .)
    END             reduce using rule 46 (impresion -> PUTS datos .)
    ELSE            reduce using rule 46 (impresion -> PUTS datos .)
    RETURN          reduce using rule 46 (impresion -> PUTS datos .)


state 22

    (48) impresion -> PUTS LOCALVAR .
    (40) masopciones -> LOCALVAR . DOT funcionesHash masopciones

    $end            reduce using rule 48 (impresion -> PUTS LOCALVAR .)
    END             reduce using rule 48 (impresion -> PUTS LOCALVAR .)
    ELSE            reduce using rule 48 (impresion -> PUTS LOCALVAR .)
    RETURN          reduce using rule 48 (impresion -> PUTS LOCALVAR .)
    DOT             shift and go to state 41


state 23

    (50) impresion -> PUTS masopciones .

    $end            reduce using rule 50 (impresion -> PUTS masopciones .)
    END             reduce using rule 50 (impresion -> PUTS masopciones .)
    ELSE            reduce using rule 50 (impresion -> PUTS masopciones .)
    RETURN          reduce using rule 50 (impresion -> PUTS masopciones .)


state 24

    (28) datos -> NUMBER .

    $end            reduce using rule 28 (datos -> NUMBER .)
    END             reduce using rule 28 (datos -> NUMBER .)
    ELSE            reduce using rule 28 (datos -> NUMBER .)
    RETURN          reduce using rule 28 (datos -> NUMBER .)
    DOUBLEEQUAL     reduce using rule 28 (datos -> NUMBER .)
    TRIPLEEQUAL     reduce using rule 28 (datos -> NUMBER .)
    GREATERTHAN     reduce using rule 28 (datos -> NUMBER .)
    EXCLAMATION     reduce using rule 28 (datos -> NUMBER .)
    LESSTHAN        reduce using rule 28 (datos -> NUMBER .)
    GREQUAL         reduce using rule 28 (datos -> NUMBER .)
    LEQUAL          reduce using rule 28 (datos -> NUMBER .)
    RBRACKET        reduce using rule 28 (datos -> NUMBER .)
    COMMA           reduce using rule 28 (datos -> NUMBER .)
    EQUAL           reduce using rule 28 (datos -> NUMBER .)
    FOR             reduce using rule 28 (datos -> NUMBER .)
    PUTS            reduce using rule 28 (datos -> NUMBER .)
    PRINT           reduce using rule 28 (datos -> NUMBER .)
    VAR             reduce using rule 28 (datos -> NUMBER .)
    LOCALVAR        reduce using rule 28 (datos -> NUMBER .)
    CONSTANT        reduce using rule 28 (datos -> NUMBER .)
    RPARENTHESES    reduce using rule 28 (datos -> NUMBER .)
    RCURLYBRACKET   reduce using rule 28 (datos -> NUMBER .)


state 25

    (29) datos -> FLOAT .

    $end            reduce using rule 29 (datos -> FLOAT .)
    END             reduce using rule 29 (datos -> FLOAT .)
    ELSE            reduce using rule 29 (datos -> FLOAT .)
    RETURN          reduce using rule 29 (datos -> FLOAT .)
    DOUBLEEQUAL     reduce using rule 29 (datos -> FLOAT .)
    TRIPLEEQUAL     reduce using rule 29 (datos -> FLOAT .)
    GREATERTHAN     reduce using rule 29 (datos -> FLOAT .)
    EXCLAMATION     reduce using rule 29 (datos -> FLOAT .)
    LESSTHAN        reduce using rule 29 (datos -> FLOAT .)
    GREQUAL         reduce using rule 29 (datos -> FLOAT .)
    LEQUAL          reduce using rule 29 (datos -> FLOAT .)
    RBRACKET        reduce using rule 29 (datos -> FLOAT .)
    COMMA           reduce using rule 29 (datos -> FLOAT .)
    EQUAL           reduce using rule 29 (datos -> FLOAT .)
    FOR             reduce using rule 29 (datos -> FLOAT .)
    PUTS            reduce using rule 29 (datos -> FLOAT .)
    PRINT           reduce using rule 29 (datos -> FLOAT .)
    VAR             reduce using rule 29 (datos -> FLOAT .)
    LOCALVAR        reduce using rule 29 (datos -> FLOAT .)
    CONSTANT        reduce using rule 29 (datos -> FLOAT .)
    RPARENTHESES    reduce using rule 29 (datos -> FLOAT .)
    RCURLYBRACKET   reduce using rule 29 (datos -> FLOAT .)


state 26

    (30) datos -> STRING .

    $end            reduce using rule 30 (datos -> STRING .)
    END             reduce using rule 30 (datos -> STRING .)
    ELSE            reduce using rule 30 (datos -> STRING .)
    RETURN          reduce using rule 30 (datos -> STRING .)
    DOUBLEEQUAL     reduce using rule 30 (datos -> STRING .)
    TRIPLEEQUAL     reduce using rule 30 (datos -> STRING .)
    GREATERTHAN     reduce using rule 30 (datos -> STRING .)
    EXCLAMATION     reduce using rule 30 (datos -> STRING .)
    LESSTHAN        reduce using rule 30 (datos -> STRING .)
    GREQUAL         reduce using rule 30 (datos -> STRING .)
    LEQUAL          reduce using rule 30 (datos -> STRING .)
    RBRACKET        reduce using rule 30 (datos -> STRING .)
    COMMA           reduce using rule 30 (datos -> STRING .)
    EQUAL           reduce using rule 30 (datos -> STRING .)
    FOR             reduce using rule 30 (datos -> STRING .)
    PUTS            reduce using rule 30 (datos -> STRING .)
    PRINT           reduce using rule 30 (datos -> STRING .)
    VAR             reduce using rule 30 (datos -> STRING .)
    LOCALVAR        reduce using rule 30 (datos -> STRING .)
    CONSTANT        reduce using rule 30 (datos -> STRING .)
    RPARENTHESES    reduce using rule 30 (datos -> STRING .)
    RCURLYBRACKET   reduce using rule 30 (datos -> STRING .)


state 27

    (47) impresion -> PRINT datos .

    $end            reduce using rule 47 (impresion -> PRINT datos .)
    END             reduce using rule 47 (impresion -> PRINT datos .)
    ELSE            reduce using rule 47 (impresion -> PRINT datos .)
    RETURN          reduce using rule 47 (impresion -> PRINT datos .)


state 28

    (49) impresion -> PRINT LOCALVAR .
    (40) masopciones -> LOCALVAR . DOT funcionesHash masopciones

    $end            reduce using rule 49 (impresion -> PRINT LOCALVAR .)
    END             reduce using rule 49 (impresion -> PRINT LOCALVAR .)
    ELSE            reduce using rule 49 (impresion -> PRINT LOCALVAR .)
    RETURN          reduce using rule 49 (impresion -> PRINT LOCALVAR .)
    DOT             shift and go to state 41


state 29

    (51) impresion -> PRINT masopciones .

    $end            reduce using rule 51 (impresion -> PRINT masopciones .)
    END             reduce using rule 51 (impresion -> PRINT masopciones .)
    ELSE            reduce using rule 51 (impresion -> PRINT masopciones .)
    RETURN          reduce using rule 51 (impresion -> PRINT masopciones .)


state 30

    (8) funcion -> DEF LOCALVAR . LPARENTHESES argumentos RPARENTHESES cuerpo END
    (9) funcion -> DEF LOCALVAR . LPARENTHESES argumentos RPARENTHESES cuerpo retornar END

    LPARENTHESES    shift and go to state 42


state 31

    (54) if -> IF datosvarios . operadores datosvarios cuerpo END
    (55) if -> IF datosvarios . operadores datosvarios cuerpo else
    (57) operadores -> . DOUBLEEQUAL
    (58) operadores -> . TRIPLEEQUAL
    (59) operadores -> . GREATERTHAN
    (60) operadores -> . EXCLAMATION EQUAL
    (61) operadores -> . LESSTHAN
    (62) operadores -> . GREQUAL
    (63) operadores -> . LEQUAL

    DOUBLEEQUAL     shift and go to state 44
    TRIPLEEQUAL     shift and go to state 45
    GREATERTHAN     shift and go to state 46
    EXCLAMATION     shift and go to state 47
    LESSTHAN        shift and go to state 48
    GREQUAL         shift and go to state 49
    LEQUAL          shift and go to state 50

    operadores                     shift and go to state 43

state 32

    (64) datosvarios -> datos .

    DOUBLEEQUAL     reduce using rule 64 (datosvarios -> datos .)
    TRIPLEEQUAL     reduce using rule 64 (datosvarios -> datos .)
    GREATERTHAN     reduce using rule 64 (datosvarios -> datos .)
    EXCLAMATION     reduce using rule 64 (datosvarios -> datos .)
    LESSTHAN        reduce using rule 64 (datosvarios -> datos .)
    GREQUAL         reduce using rule 64 (datosvarios -> datos .)
    LEQUAL          reduce using rule 64 (datosvarios -> datos .)
    RBRACKET        reduce using rule 64 (datosvarios -> datos .)
    COMMA           reduce using rule 64 (datosvarios -> datos .)
    FOR             reduce using rule 64 (datosvarios -> datos .)
    PUTS            reduce using rule 64 (datosvarios -> datos .)
    PRINT           reduce using rule 64 (datosvarios -> datos .)
    VAR             reduce using rule 64 (datosvarios -> datos .)
    LOCALVAR        reduce using rule 64 (datosvarios -> datos .)
    CONSTANT        reduce using rule 64 (datosvarios -> datos .)


state 33

    (65) datosvarios -> tiposvariables .
